--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ tables==3.7.0
 tqdm==4.62.3 # not really necessary, but good for sanity
 
 # Install pytorch seperately
-# pip3 install torch torchvision torchaudio
+# pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
 #torch==1.10.1
 #torchaudio==0.10.1
 #torchvision==0.11.2
